# found-sdk

./: .gitignore  README.md
.github/workflows/: node-ci.yml  node-release.yml  python-ci.yml  python-release.yml
docs/: BUSINESS_API.md
node/: PUBLISHING.md  README.md  package-lock.json  package.json  tsconfig.json
node/examples/: express-app.mjs  fastify-app.mjs
node/src/: core.ts  errors.ts  index.ts  types.ts
node/src/adapters/: express.ts  fastify.ts  node-http.ts
node/test/: core.test.ts
python/: LICENSE  PUBLISHING.md  README.md  pyproject.toml
python/examples/: fastapi_app.py  flask_app.py
python/found_sdk/: __init__.py  core.py  errors.py
python/found_sdk/adapters/: __init__.py  fastapi_adapter.py  flask_adapter.py
python/tests/: test_core.py
