[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "found-sdk"
version = "0.1.0"
description = "Expose your business metrics to Found with a few lines — no manual snapshot endpoint."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Found" }]
keywords = ["found", "metrics", "kpi", "snapshot", "business"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=2.0"]
dev = ["pytest>=7.0", "fastapi>=0.100", "flask>=2.0", "httpx>=0.24", "build>=1.0", "twine>=5.0"]

[project.urls]
Homepage = "https://found.skyvpn2.online"
Documentation = "https://github.com/nikitadyachkov1970-pixel/found-sdk"
Repository = "https://github.com/nikitadyachkov1970-pixel/found-sdk"

[tool.setuptools.packages.find]
include = ["found_sdk*"]
